--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👑The Saga of Jam</title>
+    <title>👑The Saga of Monet</title>
 </head>
 
 <body>
     <table cellspacing="33">
         <tr>
             <td><img src="https://tse3.mm.bing.net/th?id=OIP.Av5IOoggCH-BiTT0pkZfFwHaHa&pid=Api&P=0&w=300&h=300" alt="Jam&Jerry Wright image 1"> </td>
-            <td><h1>Jamyra "Jam" Wright</h1>
+            <td><h1>J. Monet Wright</h1>
     <p><em>Foundress of <strong><a href="https://www.qkjj.org/">Queen&King™</a></strong> & Software Developer In Training</em></p>
     <p>I started <strong>Queen&King™</strong> with the help of my supportive husband. Together we handcraft luxury headwraps(which we call "crowns") & jewelry (which we call "treasure") for women
         & men. We are also Software Developers. We have a passion for technology & fashion. We plan to utilize both of our passions to create masterpieces & a household name that
@@ -23,6 +23,7 @@
     <li><p>School of Hard Knox July 1993-Current</p></li>
         <li></p>University of Hagerstown Community College  May 2018-Current</p></li> 
         <li><p>YouTube University Feb 2015-Current</p></li> 
+ <li><p>Udemy Oct 2020-Current</p></li>
         </ul>
         <hr>
         <h3>Work Experience</h3>
